feat:Adding keyclock server

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 
-server.port=8081
+server.port=0
 
 spring.cloud.config.enabled=false
 spring.cloud.config.import-check.enabled=false
@@ -10,3 +10,5 @@ spring.data.mongodb.database=products
 spring.data.mongodb.username=admin
 spring.data.mongodb.authentication-database = admin
 spring.data.mongodb.password=password
+spring.application.name=product-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
