--- a/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8083
+server.port=0
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -6,3 +6,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/inventory
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.application.name=inventory-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
