--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 
-server.port=8082
+server.port=0
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -8,3 +8,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/order_d
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=create-drop
+spring.application.name=order-service
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
