--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,8 @@
         <module>order-service</module>
         <module>inventory-service</module>
         <module>discovery-service</module>
+        <module>api-gateway</module>
+
 
     </modules>
 
